--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="mifort.ico" />
   </head>
   <body>
     <app-root></app-root>
